client/src/index.css
* {
  margin: 0; /* reset */
  padding: 0; /* reset */
  scroll-behavior: smooth;
  box-sizing: border-box;
  font-family: Bookerly, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  /* background-color: #ffffff;
   */
  /* height: 100%; */
  display: flex;
  flex-direction: column;
  background-color: #fcefd2;
  min-height: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.card{
  margin: 0 15px 30px 15px;
  max-height: 365px;
}

.app-container {
  position: relative;
}

form label {
  display:inline-block;
  margin: 0px 0px 10px 0px ;
}

button {
  border-radius: 8px;
  border-style: none;
  box-sizing: border-box;
  color: black;
  cursor: pointer;
  display: inline-block;
  padding: 5px 16px;
  border: 1px solid rgba(0, 0, 0, 0.3);
  text-align: center;
  background-color: #efefef;
}

button:hover{
  background-color: #fffdfd;
}

input, textarea{
  display: block;
    /* width: 100%; */
    height: calc(1.5em + 0.75rem + 2px);
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

/* .page-container {
  width: 1350px;
  margin: 40px auto;
  min-height: 100vh;

} */

/* .create{
  background-image: url("./images/create-recipe.jpg");
  background-size: 1500px;
} */

@font-face {
  font-family: "Bookerly Display";
  src: url("./fonts/BookerlyDisplay-Regular.woff2") format("woff2"),
    url("./fonts/BookerlyDisplay-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly";
  src: url("./fonts/Bookerly-BoldItalic.woff2") format("woff2"),
    url("./fonts/Bookerly-BoldItalic.woff") format("woff");
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly Display";
  src: url("./fonts/BookerlyDisplay-Bold.woff2") format("woff2"),
    url("./fonts/BookerlyDisplay-Bold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly Display";
  src: url("./fonts/BookerlyDisplay-BoldItalic.woff2") format("woff2"),
    url("./fonts/BookerlyDisplay-BoldItalic.woff") format("woff");
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly Display";
  src: url("./fonts/BookerlyDisplay-Italic.woff2") format("woff2"),
    url("./fonts/BookerlyDisplay-Italic.woff") format("woff");
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly";
  src: url("./fonts/Bookerly-LightItalic.woff2") format("woff2"),
    url("./fonts/Bookerly-LightItalic.woff") format("woff");
  font-weight: 300;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly";
  src: url("./fonts/Bookerly-LightItalic.woff2") format("woff2"),
    url("./fonts/Bookerly-LightItalic.woff") format("woff");
  font-weight: 300;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly";
  src: url("./fonts/Bookerly-Bold.woff2") format("woff2"),
    url("./fonts/Bookerly-Bold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly";
  src: url("./fonts/Bookerly-Light.woff2") format("woff2"),
    url("./fonts/Bookerly-Light.woff") format("woff");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly";
  src: url("./fonts/Bookerly-Italic.woff2") format("woff2"),
    url("./fonts/Bookerly-Italic.woff") format("woff");
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly";
  src: url("./fonts/Bookerly-Italic.woff2") format("woff2"),
    url("./fonts/Bookerly-Italic.woff") format("woff");
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Bookerly";
  src: url("./fonts/Bookerly-Regular.woff2") format("woff2"),
    url("./fonts/Bookerly-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

